2025-04-08  Zhengyi Fu  <i@fuzy.me>

	Remove `puni'

	* packages.el:
	* init.el: Remove `puni' configuration.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+repeat--post-command): Fixed the error where
	`this-command` is not a symbol.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Bind "q" to `quit-window'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Add keybinding for `flymake-mode'

	* init.el (toggle-map): Bind "f" to `flymake-mode'.
	Bind "q" to `display-fill-column-indicator-mode'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Better window scrolling after xref jump and return

	* init.el (+recenter-bottom-30%): New function.  Added to
	`xref-after-return-hook'.
	<xref>: Remove `recenter' from `xref-after-jump-hook'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Improve flymake configurations

	* init.el (+nxml-mode--flymake, +cc-mode--hook): Fix typo
	(`flymake-diagnostic-functions').
	(flymake-systemd): Autoload this function.
	(+systemd-mode--setup): New function.  Added to `systemd-mode-hook'.

2025-04-06  Zhengyi Fu  <i@fuzy.me>

	Update `diff-hl' state after committing with vc-dwim

	* init.el <diff-hl>: Add `diff-hl-update' to
	`vc-dwim-post-commit-hook'.

2025-04-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Fix key binding for `meow-universal-argument'.

2025-04-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-magit-package-status): Fix `interactive' form.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (send-password-to-buffer-process): New command.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Add --query-driver= arguments to clangd.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (buffer-list-update-hook): Add `recentf-track-opened-file'.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Bind "C-c C-a" to `eglot-code-actions'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Remove command `+citre-enable'

	* init.el (+citre--get-major-modes-for-citre): Remove function.
	(+citre-enable): Remove command.  Use